--- a/html/admin/addProduct.html
+++ b/html/admin/addProduct.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="../css/productPopUpStyle.css">
+<link rel="stylesheet" href="../../css/productPopUpStyle.css">
 
 
-<div class="products_popup_bigbox">
+<div class="addProducts_popup_bigbox">
 
     <div class="image_column" id="image_column">
     </div>
@@ -24,8 +24,8 @@
         </div>
         <div class="twobutton">
 
-            <button id="saveButton" class="btn small-btn"><img src="../img/logos/save-icon.png" alt="">Save</button>
-            <button id="cancelButton" class="btn small-btn"><img src="../img/logos/cancel-icon.png" alt="">Cancel
+            <button id="saveButton" class="btn small-btn"><img src="../../img/logos/save-icon.png" alt="">Save</button>
+            <button id="cancelButton" class="btn small-btn"><img src="../../img/logos/cancel-icon.png" alt="">Cancel
             </button>
         </div>
 
@@ -40,4 +40,4 @@
      </div>-->
 
 </div>
-<script rel="stylesheet" src="../js/popups/addProduct.js" type="module" defer></script>
+<script rel="stylesheet" src="../../js/admin/addProduct.js" type="module" defer></script>
