--- a/html/main-page.html
+++ b/html/main-page.html
@@ -9,6 +9,7 @@
           rel="stylesheet"
   />
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/main-page.css" />
 
   <script src="../js/frontPageProductsFetch.js" type="module" defer ></script>
 
