--- a/html/admin/adminProductPopUpPage.html
+++ b/html/admin/adminProductPopUpPage.html
@@ -36,6 +36,8 @@
         <option value="3 case">3 case</option>
         <option value="4 case">4 case</option>
       </select>
+
+      <button class="btnK" id="deleteKombuchaBtn" > <img src="../../img/logos/cancel-icon.png"> Delete </button>
     </div>
   </div>
 </div>
