--- a/html/admin/adminProducts.html
+++ b/html/admin/adminProducts.html
@@ -8,6 +8,7 @@
             crossorigin="anonymous"></script>
 
     <script src="../../js/admin/adminProductFetch.js" type="module" defer></script>
+    <script src="../../js/admin/deleteProduct.js" type="module" defer></script>
     <script src="../../js/admin/addProductPopUpClick.js" type="module" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
@@ -37,7 +38,7 @@
             /></a>
         <ul class="nav__links">
             <li class="nav__item">
-                <a class="nav__link" href="productsAdmin.html">Products</a>
+                <a class="nav__link" href="adminProducts.html">Products</a>
             </li>
             <li class="nav__item">
                 <a class="nav__link" href="../locations.html">Locations</a>
