--- a/html/popUpPage.html
+++ b/html/popUpPage.html
@@ -10,7 +10,7 @@
 
             <div class="closebtn">
                 <a href="products.html">
-                    <img src="../img/logos/close_button.png" style="height: 7%; width: 7%">
+                    <img src="../img/icons/close_button.png" style="height: 7%; width: 7%">
                 </a>
             </div>
 
