--- a/html/admin/adminProducts.html
+++ b/html/admin/adminProducts.html
@@ -8,7 +8,6 @@
             crossorigin="anonymous"></script>
 
     <script src="../../js/admin/adminProductFetch.js" type="module" defer></script>
-    <script src="../../js/admin/deleteProduct.js" type="module" defer></script>
     <script src="../../js/admin/addProductPopUpClick.js" type="module" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
@@ -28,7 +27,7 @@
 
 <header class="product-header">
     <nav class="nav">
-        <a onclick="window.location='main-page.html'" type="button">
+        <a onclick="window.location='../main-page.html'" type="button">
             <img
                     src="../../img/logos/Logo_small.bmp"
                     alt="Bankist logo"
@@ -64,7 +63,7 @@
 
 </header>
 
-<body>
+<body class="productBackground">
 <input type="hidden" id="chosenProductId" name="chosenProductId" value="">
 
 <section>
@@ -77,7 +76,7 @@
         <div class="products_box" id="products">
             <div class="products_box">
 
-                <button id="addProductButton">Add new</button>
+                <button id="addProductButton" class="addProduct">Add new</button>
             </div>
         </div>
     </div>
