--- a/html/admin/editProduct.html
+++ b/html/admin/editProduct.html
@@ -40,4 +40,4 @@
      </div>-->
 
 </div>
-<script rel="stylesheet" src="../../js/admin/addProduct.js" type="module" defer></script>
+<script rel="stylesheet" src="../../js/admin/editProduct.js" type="module" defer></script>
