--- a/html/admin/adminProducts.html
+++ b/html/admin/adminProducts.html
@@ -76,7 +76,7 @@
         <div class="products_box" id="products">
             <div class="products_box">
 
-                <button id="addProductButton" class="addProduct">Add new</button>
+                <button id="addProductButton" class="addProduct" style="background-image: radial-gradient(circle, #386ecb, #3668d6, #3258ca, #1b38d0, #3036b1);">Add new</button>
             </div>
         </div>
     </div>
