--- a/html/admin/deleteProductPopUp.html
+++ b/html/admin/deleteProductPopUp.html
@@ -1,5 +1,5 @@
-<div class="products_popup_bigbox">
-    <div class="product_popup_smallbox">
+
+    <div class="deleteWarningBox">
         <img src="../../img/icons/warning-icon.png" alt="warning icon">
 
         <div class="pStyle">
@@ -11,6 +11,5 @@
             <button class="deleteButton" id="cancel">no</button>
         </div>
     </div>
-</div>
 
 <script src="../../js/admin/deleteProduct.js"></script>
