--- a/html/popUpPage.html
+++ b/html/popUpPage.html
@@ -20,13 +20,16 @@
             <br>
             <p id="productDescription"></p>
 
+            <div class="twoButtons">
 
-            <select name="quantity" id="quantity">
+            <select name="quantity" id="quantity" style="width: 50%">
                 <option value="1 case" selected>1 case</option>
                 <option value="2 case">2 case</option>
                 <option value="3 case">3 case</option>
                 <option value="4 case">4 case</option>
             </select>
+                <button class="editButton" id="editProductBtn"> <img src="../img/icons/edit-icon.png">Order</button>
+                </div>
         </div>
     </div>
 </div>
