--- a/html/admin/adminProducts.html
+++ b/html/admin/adminProducts.html
@@ -7,7 +7,7 @@
             integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
             crossorigin="anonymous"></script>
 
-    <script src="../../js/admin/adminProductFetch.js" type="module" defer></script>
+    <script src="../../js/productsFetch.js" type="module" defer></script>
     <script src="../../js/admin/addProductPopUpClick.js" type="module" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
