Position of navbar is fixed and kalle_logo moved a bit down

--- a/html/main-page.html
+++ b/html/main-page.html
@@ -57,7 +57,7 @@
 
     <img
             src="../img/logos/Logo_big.bmp"
-            class="Kalle Logo"
+            class="kalle_logo"
             alt="Kalle Logo"
     />
   </div>
