Created blog view and styled it.

--- a/html/blog.html
+++ b/html/blog.html
@@ -5,8 +5,8 @@
     <title>Blog</title>
 
 
-    <link rel="stylesheet" href="../../css/style.css"/>
-    <link rel="stylesheet" href="../../css/blog.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/blog.css"/>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
@@ -15,8 +15,8 @@
 <body>
 
 </head>
-<header class="header-blog">
-    <nav class="nav">
+<header class="header-login">
+    <nav class="nav-blog">
         <a onclick="window.location='main-page.html'" type="button">
             <img
                     src="../img/logos/Logo_small.bmp"
