style.css renamed to global.css and did some refactoring in it.

--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,7 @@
           href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
           rel="stylesheet"
   />
-  <link rel="stylesheet" href="../css/style.css"/>
+  <link rel="stylesheet" href="../css/global.css"/>
   <link rel="stylesheet" href="../css/login.css"/>
 
   <title>Kalle's Kombucha login page</title>
