--- a/html/admin/blog-admin.html
+++ b/html/admin/blog-admin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Blog</title>
 
-  <link rel="stylesheet" href="../../css/style.css"/>
+  <link rel="stylesheet" href="../../css/global.css"/>
   <link rel="stylesheet" href="../../css/blog.css"/>
 
 </head>
