--- a/html/blog.html
+++ b/html/blog.html
@@ -5,7 +5,7 @@
     <title>Blog</title>
 
 
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" href="../css/blog.css"/>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
