--- a/html/main-page.html
+++ b/html/main-page.html
@@ -8,7 +8,7 @@
           href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
           rel="stylesheet"
   />
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/global.css" />
   <link rel="stylesheet" href="../css/main-page.css" />
 
   <script src="../js/frontPageProductsFetch.js" type="module" defer ></script>
