--- a/html/products.html
+++ b/html/products.html
@@ -14,7 +14,7 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" href="../css/products.css"/>
     <link rel="stylesheet" href="../css/productPopUpStyle.css"/>
 
