--- a/html/aboutKalle.html
+++ b/html/aboutKalle.html
@@ -8,12 +8,12 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/locations.css" />
+    <link rel="stylesheet" href="../css/aboutKalle.css" />
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/main-page.css" />
 
 
-    <title>Locations</title>
+    <title>About Kalle</title>
 </head>
 <body>
 <header class="headerK">
@@ -59,11 +59,53 @@
     </nav>
 </header>
 
-<h3 class="section__header"> LOCATIONS</h3>
 
+<section class="sectionKalle" id="section--3">
+    <div class="section__titleK">
 
+        <img src="../img/kallePhoto/KallePhoto.png" alt="Terracotta female statue" class="frame">
+
+        <h2 class="section__descriptionK">Kalle</h2>
+        <h3 class="section__headerK">
+            Kalle is the new hot shot on the kombucha scene.
+        </h3>
+        <h3 class="section__header">
+            STUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFF</h3>
+        <h3 class="section__header"
+        > AMAzingAMAzingAMAzingAMAzingAMAzingAMAzingAMAzingAMAzing</h3>
+        <h3 class="section__header"
+        > wowowowowowowowowowowowowowowowowowowowowow</h3>
+    </div>
+</section>
+
+<footer>
+    <section class="footerK" >
+        <div class="containerSoMe">
+            <div class="section__title">
+            <h3 class="footer__link">
+                Find us @
+            </h3>
+            <a href="https://www.facebook.com/"  class="btn footer__btn"
+            > <i class="fa-brands fa-facebook" id="facebook"></i>
+            </a>
+            <a  href="https://www.instagram.com/"  class="btn footer__btn"
+            > <i class="fa-brands fa-instagram" id="apple"></i>
+            </a>
+            <a href="https://twitter.com/" class="btn footer__btn"
+            > <i class="fa-brands fa-twitter" id="twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="btn footer__btn"
+            > <i class="fa-brands fa-linkedin" id="github"></i>
+            </a>
+
+            <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
+            </div>
+        </div>
+    </section>
+</footer>
 <script src="../js/aboutKalle.js" type="module" defer></script>
 <script src="../js/hideNavBar.js" type="module" defer></script>
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
