--- a/html/admin/adminProducts.html
+++ b/html/admin/adminProducts.html
@@ -43,7 +43,7 @@
                 <a class="nav__link" href="../locations.html">Locations</a>
             </li>
             <li class="nav__item">
-                <a class="nav__link" href="../about.html">About</a>
+                <a class="nav__link" href="../aboutKalle.html">About</a>
             </li>
             <li class="nav__item">
                 <a class="nav__link" href="../blog.html">Blog</a>
