--- a/html/contactInformation.html
+++ b/html/contactInformation.html
@@ -8,16 +8,16 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/locations.css" />
+    <link rel="stylesheet" href="../css/aboutKombucha.css" />
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/main-page.css" />
 
 
-    <title>Locations</title>
+    <title>Contact</title>
 </head>
 <body>
 <header class="headerK">
-    <nav class="nav" id="nav">
+    <nav class="nav" >
         <a onclick="window.location='main-page.html'" type="button">
             <img
                     src="../img/logos/Logo_small.bmp"
@@ -59,8 +59,7 @@
     </nav>
 </header>
 
-<h3 class="section__header"> LOCATIONS</h3>
-
+<h1>Kombucha is fermented tea heehee</h1>
 
 <script src="../js/aboutKalle.js" type="module" defer></script>
 <script src="../js/hideNavBar.js" type="module" defer></script>
