--- a/html/aboutKalle.html
+++ b/html/aboutKalle.html
@@ -60,7 +60,7 @@
 </header>
 
 
-<section class="sectionKalle" id="section--3">
+<section class="sectionKalle">
     <div class="section__titleK">
 
         <img src="../img/kallePhoto/KallePhoto.png" alt="Terracotta female statue" class="frame">
