--- a/html/aboutKombucha.html
+++ b/html/aboutKombucha.html
@@ -8,7 +8,7 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/aboutKombucha.css" />
+    <link rel="stylesheet" href="../css/aboutKalle.css" />
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/main-page.css" />
 
@@ -59,7 +59,48 @@
     </nav>
 </header>
 
-<h1>Kombucha is fermented tea heehee</h1>
+<section class="sectionKalle">
+    <div class="section__titleK">
+
+
+        <h2 class="section__descriptionK">Kombucha</h2>
+        <h3 class="section__headerK">
+            Kombucha is fermented tea
+        </h3>
+        <h3 class="section__header">
+            tastes good tastes good tastes good tastes good</h3>
+        <h3 class="section__header"
+        > brewing brewing brewin brewing brewing brewing </h3>
+        <h3 class="section__header"
+        > history history history history</h3>
+    </div>
+</section>
+
+<footer>
+    <section class="footerK" >
+        <div class="containerSoMe">
+            <div class="section__title">
+                <h3 class="footer__link">
+                    Find us @
+                </h3>
+                <a href="https://www.facebook.com/"  class="btn footer__btn"
+                > <i class="fa-brands fa-facebook" id="facebook"></i>
+                </a>
+                <a  href="https://www.instagram.com/"  class="btn footer__btn"
+                > <i class="fa-brands fa-instagram" id="apple"></i>
+                </a>
+                <a href="https://twitter.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-twitter" id="twitter"></i>
+                </a>
+                <a href="https://www.linkedin.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-linkedin" id="github"></i>
+                </a>
+
+                <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
+            </div>
+        </div>
+    </section>
+</footer>
 
 <script src="../js/aboutKalle.js" type="module" defer></script>
 <script src="../js/hideNavBar.js" type="module" defer></script>
