--- a/html/contactInformation.html
+++ b/html/contactInformation.html
@@ -8,7 +8,8 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/aboutKombucha.css" />
+
+    <link rel="stylesheet" href="../css/contact.css" />
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/main-page.css" />
 
@@ -16,7 +17,7 @@
     <title>Contact</title>
 </head>
 <body>
-<header class="headerK">
+<header class="headerC">
     <nav class="nav" >
         <a onclick="window.location='main-page.html'" type="button">
             <img
@@ -59,7 +60,57 @@
     </nav>
 </header>
 
-<h1>Kombucha is fermented tea heehee</h1>
+<section class="sectionContact">
+    <div class="section__titleC">
+        <h1 class="h1C">Contact</h1>
+
+        <h4 class="hidden"> kjfbjsbfsoasjbg</h4>
+
+        <h4 class="h4C">
+            Phone:
+        </h4>
+        <h4 class="h4C">
+          +45 23456789
+        </h4>
+        <h4 class="h4C">
+            Mail:
+        </h4>
+        <h4 class="h4C">
+          kallekombucha@gmail.com
+        </h4>
+        <h4 class="h4C">
+            Business hours:
+        </h4>  <h4 class="h4C">
+        Mon-Fri 10:00-17:00
+        </h4>
+    </div>
+</section>
+
+<footer>
+    <section class="footerK" >
+        <div class="containerSoMe">
+            <div class="section__title">
+                <h3 class="footer__link">
+                    Find us @
+                </h3>
+                <a href="https://www.facebook.com/"  class="btn footer__btn"
+                > <i class="fa-brands fa-facebook" id="facebook"></i>
+                </a>
+                <a  href="https://www.instagram.com/"  class="btn footer__btn"
+                > <i class="fa-brands fa-instagram" id="apple"></i>
+                </a>
+                <a href="https://twitter.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-twitter" id="twitter"></i>
+                </a>
+                <a href="https://www.linkedin.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-linkedin" id="github"></i>
+                </a>
+
+                <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
+            </div>
+        </div>
+    </section>
+</footer>
 
 <script src="../js/aboutKalle.js" type="module" defer></script>
 <script src="../js/hideNavBar.js" type="module" defer></script>
