--- a/html/aboutKombucha.html
+++ b/html/aboutKombucha.html
@@ -8,7 +8,7 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/aboutKalle.css" />
+    <link rel="stylesheet" href="../css/aboutKombucha.css" />
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/main-page.css" />
 
@@ -64,6 +64,11 @@
 
 
         <h2 class="section__descriptionK">Kombucha</h2>
+        <div id="frame">
+            <div id="border">
+                <img src="../img/kallePhoto/teaField.png">
+            </div><!-- #border -->
+        </div><!-- #frame -->
         <h3 class="section__headerK">
             Kombucha is fermented tea
         </h3>
@@ -71,9 +76,26 @@
             tastes good tastes good tastes good tastes good</h3>
         <h3 class="section__header"
         > brewing brewing brewin brewing brewing brewing </h3>
+
+        <div id="frame">
+            <div id="border">
+                <img src="../img/kallePhoto/bottle.png">
+            </div><!-- #border -->
+        </div><!-- #frame -->
         <h3 class="section__header"
         > history history history history</h3>
+        <h3 class="section__header"
+        > history history history history</h3>
+
+        <div id="frame">
+            <div id="border">
+                <img src="../img/kallePhoto/walking.png">
+            </div><!-- #border -->
+        </div><!-- #frame -->
     </div>
+
+    <h3 class="section__header"
+    > Kombucha today</h3>
 </section>
 
 <footer>
