--- a/html/locations.html
+++ b/html/locations.html
@@ -8,6 +8,7 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/locations.css" />
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/main-page.css" />
@@ -59,11 +60,168 @@
     </nav>
 </header>
 
-<h3 class="section__header"> LOCATIONS</h3>
+<section class="sectionLoc">
+    <div class="section__titleL">
 
+        <img src="../img/kallePhoto/globe.png" alt="Terracotta female statue" class="frame">
+
+        <h2 class="section__descriptionL">Locations</h2>
+        <h3 class="section__headerL">
+            Our wonderful product is sold by vendors all over the world.
+        </h3>
+        <h3 class="section__headerL">
+            Browse the list below to see which store sells it near you!
+        </h3>
+        <h3 class="section__headerL">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </h3>
+
+        <h3 class="section__header">
+            Denmark</h3>
+        <h2>&nbsp;</h2>
+        <h2>Sjælland</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Fyn</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Jylland</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Bornholm</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h3 class="section__header">
+            Sweden</h3>
+        <h2>&nbsp;</h2>
+        <h2>Stockholm</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Gothenburg</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Malmö</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h3 class="section__header">
+            Norway</h3>
+        <h2>&nbsp;</h2>
+        <h2>Oslo</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Bergen</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h3 class="section__header">
+            Germany</h3>
+        <h2>&nbsp;</h2>
+        <h2>Berlin</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Frankfurt</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h3 class="section__header">
+            Hungary</h3>
+        <h2>&nbsp;</h2>
+        <h2>Budapest</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Miskolc</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h3 class="section__header">
+            Brazil</h3>
+        <h2>&nbsp;</h2>
+        <h2>São Paulo</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Rio de Janeiro</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h3 class="section__header">
+            Japan</h3>
+        <h2>&nbsp;</h2>
+        <h2>Tokyo</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Kyoto</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h3 class="section__header">
+            USA</h3>
+        <h2>&nbsp;</h2>
+        <h2>New York</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+        <h2>Los Angeles</h2>
+        <h2>&nbsp;</h2>
+        <h3>xxxxxxxx</h3>
+        <h2>&nbsp;</h2>
+
+
+    </div>
+</section>
+
+<footer>
+    <section class="footerK" >
+        <div class="containerSoMe">
+            <div class="section__title">
+                <h3 class="footer__link">
+                    Find us @
+                </h3>
+                <a href="https://www.facebook.com/"  class="btn footer__btn"
+                > <i class="fa-brands fa-facebook" id="facebook"></i>
+                </a>
+                <a  href="https://www.instagram.com/"  class="btn footer__btn"
+                > <i class="fa-brands fa-instagram" id="apple"></i>
+                </a>
+                <a href="https://twitter.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-twitter" id="twitter"></i>
+                </a>
+                <a href="https://www.linkedin.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-linkedin" id="github"></i>
+                </a>
+
+                <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
+            </div>
+        </div>
+    </section>
+</footer>
 
 <script src="../js/aboutKalle.js" type="module" defer></script>
-<script src="../js/hideNavBar.js" type="module" defer></script>
+<script src="../js/locations.js" type="module" defer></script>
+
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 </body>
 </html>
