Blog work in progress

--- a/html/main-page.html
+++ b/html/main-page.html
@@ -267,7 +267,7 @@
 </footer>
 
 
-<script src="js/frontPageProductsFetch.js" type="module" defer></script>
+<script src="../js/frontPageProductsFetch.js" type="module" defer></script>
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
