--- a/html/blog.html
+++ b/html/blog.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <title>Blog</title>
 
-
     <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" href="../css/blog.css"/>
-
+    <link rel="stylesheet" href="../css/products.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
-
+    <script src="../js/blogFetch.js" type="module" defer></script>
 </head>
 <body>
 
-</head>
 <header class="header-login">
     <nav class="nav-blog">
         <a onclick="window.location='main-page.html'" type="button">
@@ -40,10 +38,10 @@
             </li>
             <li class="nav__item">
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                > <i class="fa-solid fa-cart-shopping"></i>
+                ><i class="fa-solid fa-cart-shopping"></i>
                 </button>
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                > <i class="fa-solid fa-user"></i>
+                ><i class="fa-solid fa-user"></i>
                 </button>
 
             </li>
@@ -52,63 +50,41 @@
 
 </header>
 
-<div class="blog-container">
-    <div class="grid">
-        <div class="blog-card">
-            <div class="card_img">
-            </div>
-            <div class="card_body">
-                <h2 class="card_title">Get yourself motivated</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum porro, illum totam nostrum sit delectus nisi sint magni perspiciatis adipisci?</p>
-                <p class="card_author">by <a href="#" class="author_link">sofiullah chowdhury</a></p>
-                <a href="#" class="read_more">Read article</a>
-            </div>
-        </div>
-        <div class="blog-card">
-            <div class="card_img">
-            </div>
-            <div class="card_body">
-                <h2 class="card_title">Learn the art of cooking</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio quidem, est labore earum reprehenderit quibusdam id iure delectus nemo.</p>
-                <p class="card_author">by <a href="#" class="author_link">sofiullah chowdhury</a></p>
-                <a href="#" class="read_more">Read article</a>
-            </div>
-        </div>
-        <div class="blog-card">
-            <div class="card_img">
-            </div>
-            <div class="card_body">
-                <h2 class="card_title">Get your freedom</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio quidem, est labore earum reprehenderit quibusdam id iure delectus nemo.</p>
-                <p class="card_author">by <a href="#" class="author_link">sofiullah chowdhury</a></p>
-                <a href="#" class="read_more">Read article</a>
-            </div>
-        </div>
-    </div>
-</div>
+<section>
+    <div class="blog_container" id="blogContainer">
+        <div class="grid">
+            <div class="blog_card" id="blogCard">
+                <div class="card_body" id="cardBody">
 
-<section class="footer-blog" >
-    <div class="section__title">
-        <h3 class="footer__link">
-            Find us @
-        </h3>
-        <a href="https://www.facebook.com/"  class="btn footer__btn"
-        > <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a  href="https://www.instagram.com/" class="btn footer__btn"
-        > <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="https://twitter.com/" class="btn footer__btn"
-        > <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="https://www.linkedin.com/" class="btn footer__btn"
-        > <i class="fa-brands fa-linkedin"></i>
-        </a>
-
-        <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
+<footer>
+    <section class="footer-blog">
+        <div class="section__title">
+            <h3 class="footer__link">
+                Find us @
+            </h3>
+            <a href="https://www.facebook.com/" class="btn footer__btn"
+            > <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/" class="btn footer__btn"
+            > <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://twitter.com/" class="btn footer__btn"
+            > <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="btn footer__btn"
+            > <i class="fa-brands fa-linkedin"></i>
+            </a>
+
+            <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
+        </div>
+    </section>
+</footer>
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js"
         integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
