Blog user view finished (for now)

--- a/html/admin/product/deleteProductPopUp.html
+++ b/html/admin/product/deleteProductPopUp.html
@@ -1,6 +1,6 @@
 
     <div class="deleteWarningBox">
-        <img src="../../img/icons/warning-icon.png" alt="warning icon">
+        <img src="../../../img/icons/warning-icon.png" alt="warning icon">
 
 
             <h2>Warning: <br> Are you sure you want to delete this product?</h2>
@@ -11,4 +11,4 @@
         </div>
     </div>
 
-<script src="../../js/admin/deleteProduct.js"></script>
+<script src="../../../js/admin/deleteProduct.js"></script>
