--- a/html/admin/product/addProduct.html
+++ b/html/admin/product/addProduct.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../../css/productPopUpStyle.css">
+<link rel="stylesheet" href="../../../css/productPopUpStyle.css">
 
 
 <div class="editProductBox">
@@ -22,8 +22,8 @@
         </div>
         <div class="twoButtons">
 
-            <button id="saveButton" class="editButton"><img src="../../img/icons/save-icon.png" alt="Save">Save</button>
-            <button id="cancelButton" class="deleteButton"><img src="../../img/icons/cancel-icon.png" alt="Cancel">Cancel
+            <button id="saveButton" class="editButton"><img src="../../../img/icons/save-icon.png" alt="Save">Save</button>
+            <button id="cancelButton" class="deleteButton"><img src="../../../img/icons/cancel-icon.png" alt="Cancel">Cancel
             </button>
 
         </div>
@@ -37,4 +37,4 @@
          </div>-->
 
 </div>
-<script rel="stylesheet" src="../../js/admin/addProduct.js" type="module" defer></script>
+<script rel="stylesheet" src="../../../js/admin/addProduct.js" type="module" defer></script>
