--- a/html/admin/product/adminProducts.html
+++ b/html/admin/product/adminProducts.html
@@ -7,17 +7,17 @@
             integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
             crossorigin="anonymous"></script>
 
-    <script src="../../js/admin/adminProductFetch.js" type="module" defer></script>
-    <script src="../../js/admin/addProductPopUpClick.js" type="module" defer></script>
+    <script src="../../../js/admin/adminProductFetch.js" type="module" defer></script>
+    <script src="../../../js/admin/addProductPopUpClick.js" type="module" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../css/global.css"/>
-    <link rel="stylesheet" href="../../css/products.css"/>
-    <link rel="stylesheet" href="../../css/productPopUpStyle.css"/>
+    <link rel="stylesheet" href="../../../css/global.css"/>
+    <link rel="stylesheet" href="../../../css/products.css"/>
+    <link rel="stylesheet" href="../../../css/productPopUpStyle.css"/>
 
 
     <title>Kalle's Kombucha</title>
@@ -27,9 +27,9 @@
 
 <header class="product-header">
     <nav class="nav">
-        <a onclick="window.location='../main-page.html'" type="button">
+        <a onclick="window.location='../../main-page.html'" type="button">
             <img
-                    src="../../img/logos/Logo_small.bmp"
+                    src="../../../img/logos/Logo_small.bmp"
                     alt="Bankist logo"
                     class="nav__logo"
                     id="logo"
@@ -40,13 +40,13 @@
                 <a class="nav__link" href="adminProducts.html">Products</a>
             </li>
             <li class="nav__item">
-                <a class="nav__link" href="../locations.html">Locations</a>
+                <a class="nav__link" href="../../locations.html">Locations</a>
             </li>
             <li class="nav__item">
-                <a class="nav__link" href="../about.html">About</a>
+                <a class="nav__link" href="../../about.html">About</a>
             </li>
             <li class="nav__item">
-                <a class="nav__link" href="../blog.html">Blog</a>
+                <a class="nav__link" href="../../blog.html">Blog</a>
             </li>
             <li class="nav__item">
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
