--- a/html/admin/product/editProduct.html
+++ b/html/admin/product/editProduct.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../../css/productPopUpStyle.css">
+<link rel="stylesheet" href="../../../css/productPopUpStyle.css">
 
 
 <div class="editProductBox">
@@ -20,8 +20,8 @@
     </div>
     <div class="twoButtons">
 
-        <button id="saveButton" class="editButton"><img src="../../img/icons/save-icon.png" alt="">Save</button>
-        <button id="cancelButton" class="deleteButton"><img src="../../img/icons/cancel-icon.png" alt="">Cancel
+        <button id="saveButton" class="editButton"><img src="../../../img/icons/save-icon.png" alt="">Save</button>
+        <button id="cancelButton" class="deleteButton"><img src="../../../img/icons/cancel-icon.png" alt="">Cancel
         </button>
     </div>
 
@@ -35,4 +35,4 @@
 
  </div>-->
 
-<script rel="stylesheet" src="../../js/admin/editProduct.js" type="module" defer></script>
+<script rel="stylesheet" src="../../../js/admin/editProduct.js" type="module" defer></script>
